--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 307,
    "id": "25d9e0a2",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 308,
    "id": "9718983e",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 309,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 310,
    "id": "36231b1a",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 311,
    "id": "62f043cc",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 312,
    "id": "60994233",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 313,
    "id": "10151210",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 314,
    "id": "56f3a4bd",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 315,
    "id": "d8a309b0",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 316,
    "id": "18032fce",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 317,
    "id": "729cb934",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 318,
    "id": "eb1e4418",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 319,
    "id": "8ea82357",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 320,
    "id": "e1d0940c",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 321,
    "id": "b56d39e4",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 322,
    "id": "ee521b26",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 323,
    "id": "50bdbfde",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 324,
    "id": "28b8e4c3",
    "metadata": {},
    "outputs": [
@@ -374,9 +374,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " no esta en el inventario\n",
-      " no esta en el inventario\n",
-      " no esta en el inventario\n",
       "Stock actualizado\n"
      ]
     }
@@ -387,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 325,
    "id": "78dac6a5",
    "metadata": {},
    "outputs": [
@@ -405,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 326,
    "id": "6d8b69a4",
    "metadata": {},
    "outputs": [
@@ -413,15 +410,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " no esta en el inventario\n",
-      " no esta en el inventario\n",
-      " no esta en el inventario\n",
       " no esta en el inventario\n"
      ]
     }
    ],
    "source": [
     "mi_tienda.actualizar_stock (\"kimono\" , -20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bf89a45",
+   "metadata": {},
+   "source": [
+    "#eliminar producto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "id": "07b1e898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "producto eliminado\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.eliminar_producto (\"falda\")          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "id": "c9946bf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: camisa,Precio: $20,Cantidad: 130\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "id": "2748cd75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Producto no encontrado en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.eliminar_producto (\"calcetines\")  "
    ]
   }
  ],
