--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 77,
    "id": "25d9e0a2",
    "metadata": {},
    "outputs": [],
@@ -16,13 +16,13 @@
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "        producto_nuevo = {'nombre': nombre, 'precio': precio, 'cantidad': cantidad}\n",
     "        self.inventario.append(producto_nuevo)\n",
-    "\n",
     "        for producto in self.inventario:\n",
     "            if producto['nombre'] == nombre:\n",
     "                producto['cantidad'] += cantidad\n",
-    "                return\n",
+    "                \n",
     "            else:\n",
     "                nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
+    "        \n",
     "    def ver_inventario(self):                   \n",
     "        for producto in self.inventario:\n",
     "            print(f\"Nombre: {producto['nombre']},\"f\"Precio: ${producto['precio']},\"f\"Cantidad: {producto['cantidad']}\")\n",
@@ -52,13 +52,20 @@
     "                return\n",
     "        else:\n",
     "                print(\"Producto no encontrado en el inventario\")\n",
+    "\n",
+    "    def calcular_valor_inventario(self): \n",
+    "        total=0                                                           \n",
+    "        \n",
+    "        for producto in self.inventario:\n",
+    "            total += producto[\"precio\"] * producto[\"cantidad\"] \n",
+    "        print(\"Valor total del inventario:\", total)\n",
     "                \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 78,
    "id": "9718983e",
    "metadata": {},
    "outputs": [],
@@ -68,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 79,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
@@ -78,7 +85,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 80,
    "id": "36231b1a",
    "metadata": {},
    "outputs": [],
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 81,
    "id": "62f043cc",
    "metadata": {},
    "outputs": [
@@ -118,7 +125,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 82,
    "id": "60994233",
    "metadata": {},
    "outputs": [],
@@ -139,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 83,
    "id": "10151210",
    "metadata": {},
    "outputs": [
@@ -151,7 +158,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,17 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 84,
    "id": "56f3a4bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_tienda.agregar_producto(\"pantalon\",20, 40) "
+    "mi_tienda.agregar_producto(\"vestido\",20, 40) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 85,
    "id": "d8a309b0",
    "metadata": {},
    "outputs": [
@@ -180,12 +187,12 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'vestido', 'precio': 20, 'cantidad': 80}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 86,
    "id": "18032fce",
    "metadata": {},
    "outputs": [],
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 87,
    "id": "729cb934",
    "metadata": {},
    "outputs": [
@@ -214,13 +221,13 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'vestido', 'precio': 20, 'cantidad': 80},\n",
        "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 88,
    "id": "eb1e4418",
    "metadata": {},
    "outputs": [
@@ -248,8 +255,8 @@
      "output_type": "stream",
      "text": [
       "Nombre: camisa,Precio: $20,Cantidad: 80\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 80\n",
+      "Nombre: vestido,Precio: $20,Cantidad: 80\n",
       "Nombre: falda,Precio: $10,Cantidad: 60\n"
      ]
     }
@@ -268,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 89,
    "id": "8ea82357",
    "metadata": {},
    "outputs": [
@@ -286,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 90,
    "id": "e1d0940c",
    "metadata": {},
    "outputs": [
@@ -294,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: pantalon,Precio: $20,Cantidad: 120\n"
+      "Nombre: pantalon,Precio: $20,Cantidad: 80\n"
      ]
     }
    ],
@@ -304,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 91,
    "id": "b56d39e4",
    "metadata": {},
    "outputs": [
@@ -330,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 92,
    "id": "ee521b26",
    "metadata": {},
    "outputs": [
@@ -348,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 93,
    "id": "50bdbfde",
    "metadata": {},
    "outputs": [
@@ -366,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 94,
    "id": "28b8e4c3",
    "metadata": {},
    "outputs": [
@@ -384,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 95,
    "id": "78dac6a5",
    "metadata": {},
    "outputs": [
@@ -402,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 96,
    "id": "6d8b69a4",
    "metadata": {},
    "outputs": [
@@ -428,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 97,
    "id": "07b1e898",
    "metadata": {},
    "outputs": [
@@ -446,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 98,
    "id": "c9946bf8",
    "metadata": {},
    "outputs": [
@@ -455,8 +462,8 @@
      "output_type": "stream",
      "text": [
       "Nombre: camisa,Precio: $20,Cantidad: 130\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 40\n"
+      "Nombre: pantalon,Precio: $20,Cantidad: 80\n",
+      "Nombre: vestido,Precio: $20,Cantidad: 80\n"
      ]
     }
    ],
@@ -466,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 99,
    "id": "2748cd75",
    "metadata": {},
    "outputs": [
@@ -480,6 +487,24 @@
    ],
    "source": [
     "mi_tienda.eliminar_producto (\"calcetines\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "142e1e49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor total del inventario: 5800\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.calcular_valor_inventario()"
    ]
   }
  ],
