--- a/evaluacion 1 (sucio).ipynb
+++ b/evaluacion 1 (sucio).ipynb
@@ -128,14 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb7e3fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "afb95e8d",
    "metadata": {},
    "outputs": [],
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": null,
    "id": "bb6c58fa",
    "metadata": {},
    "outputs": [],
@@ -172,7 +164,13 @@
     "    \n",
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "        producto_nuevo = {'nombre': nombre, 'precio': precio, 'cantidad': cantidad}\n",
-    "        self.inventario.append(producto_nuevo)\n",
+    "        \n",
+    "        for producto in self.inventario:          #ver si el prodcuto existe y añado cantidad o añado prodc\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                producto['cantidad'] += cantidad\n",
+    "                                         \n",
+    "        \n",
+    "        self.inventario.append(producto_nuevo)             \n",
     "        \n",
     "        for producto in self.inventario:          #ver si el prodcuto existe y añado cantidad o añado prodc\n",
     "            if producto['nombre'] == nombre:\n",
@@ -208,8 +206,16 @@
     "                return\n",
     "            else:\n",
     "                print(\"Producto no encontrado en el inventario\")\n",
+    "\n",
+    "    def calcular_valor_inventario(self): \n",
+    "        total=0                                                           #empezamos nuestra tienda con 0 euros\n",
+    "        \n",
+    "        for producto in self.inventario:\n",
+    "            total += producto[\"precio\"] * producto[\"cantidad\"] \n",
+    "            print(\"Valor total del inventario:\", total)                     #total calculado\n",
     "                \n",
-    "            \n",
+    "                #pasar a limpio\n",
+    "        #el print tiene que ir aqui debajo del for porque si no me suma el valor de cada producto no el total   \n",
     "        \n",
     "             \n",
     "\n",
@@ -222,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 717,
+   "execution_count": 878,
    "id": "91f7d226",
    "metadata": {},
    "outputs": [],
@@ -232,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 718,
+   "execution_count": 879,
    "id": "55bb19ae",
    "metadata": {},
    "outputs": [
@@ -242,7 +248,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 718,
+     "execution_count": 879,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 719,
+   "execution_count": 880,
    "id": "db68ac09",
    "metadata": {},
    "outputs": [],
@@ -263,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 720,
+   "execution_count": 881,
    "id": "8271797b",
    "metadata": {},
    "outputs": [
@@ -274,7 +280,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 720,
+     "execution_count": 881,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 882,
    "id": "6b795dc8",
    "metadata": {},
    "outputs": [],
@@ -295,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 883,
    "id": "60e5dfaa",
    "metadata": {},
    "outputs": [
@@ -307,7 +313,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 722,
+     "execution_count": 883,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 884,
    "id": "d64896df",
    "metadata": {},
    "outputs": [],
@@ -328,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
+   "execution_count": 885,
    "id": "03328f9e",
    "metadata": {},
    "outputs": [
@@ -336,12 +342,11 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 724,
+     "execution_count": 885,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 725,
+   "execution_count": 886,
    "id": "78b6c333",
    "metadata": {},
    "outputs": [],
@@ -362,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 726,
+   "execution_count": 887,
    "id": "17598cff",
    "metadata": {},
    "outputs": [
@@ -371,12 +376,11 @@
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
        "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 726,
+     "execution_count": 887,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 727,
+   "execution_count": 888,
    "id": "00fbb135",
    "metadata": {},
    "outputs": [],
@@ -397,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 728,
+   "execution_count": 889,
    "id": "d94d6a8f",
    "metadata": {},
    "outputs": [
@@ -406,13 +410,12 @@
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
        "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60},\n",
        "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 728,
+     "execution_count": 889,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 729,
+   "execution_count": 890,
    "id": "41010796",
    "metadata": {},
    "outputs": [
@@ -441,7 +444,6 @@
      "text": [
       "Nombre: camisa,Precio: $20,Cantidad: 80\n",
       "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
       "Nombre: falda,Precio: $10,Cantidad: 60\n",
       "Nombre: jersey,Precio: $50,Cantidad: 34\n"
      ]
@@ -461,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 730,
+   "execution_count": 891,
    "id": "e5bc5992",
    "metadata": {},
    "outputs": [
@@ -479,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 892,
    "id": "2b673543",
    "metadata": {},
    "outputs": [
@@ -487,8 +489,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 40\n"
+      "Nombre: pantalon,Precio: $20,Cantidad: 120\n"
      ]
     }
    ],
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": 893,
    "id": "834d2b92",
    "metadata": {},
    "outputs": [
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 894,
    "id": "379fd804",
    "metadata": {},
    "outputs": [
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 895,
    "id": "9c6939bd",
    "metadata": {},
    "outputs": [
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 896,
    "id": "412c49b6",
    "metadata": {},
    "outputs": [
@@ -568,7 +569,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " no esta en el inventario\n",
       " no esta en el inventario\n",
       " no esta en el inventario\n",
       " no esta en el inventario\n",
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 897,
    "id": "e653ca4a",
    "metadata": {},
    "outputs": [
@@ -591,13 +591,12 @@
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 130},\n",
        "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60},\n",
        "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 736,
+     "execution_count": 897,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 898,
    "id": "c951c5e5",
    "metadata": {},
    "outputs": [
@@ -616,7 +615,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n",
       "producto eliminado\n"
@@ -629,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 899,
    "id": "13a21c48",
    "metadata": {},
    "outputs": [
@@ -639,7 +637,6 @@
      "text": [
       "Nombre: camisa,Precio: $20,Cantidad: 130\n",
       "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
       "Nombre: jersey,Precio: $50,Cantidad: 34\n"
      ]
     }
@@ -650,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 900,
    "id": "6d5f1d24",
    "metadata": {},
    "outputs": [
@@ -660,13 +657,78 @@
      "text": [
       "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n",
-      "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n"
      ]
     }
    ],
    "source": [
     "mi_tienda.eliminar_producto (\"calcetines\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 901,
+   "id": "cd8a7975",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 130},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 901,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 902,
+   "id": "cc51825b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor total del inventario: 2600\n",
+      "Valor total del inventario: 5000\n",
+      "Valor total del inventario: 6700\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.calcular_valor_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05b2f000",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Tiendaonline.calcular_valor_inventario() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[871]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcalcular_valor_inventario\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mpantalon\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mjersey\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: Tiendaonline.calcular_valor_inventario() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.calcular_valor_inventario([\"pantalon\",\"jersey\"])            #queria probar si puedo sumar solo 2 productos"
    ]
   }
  ],
