--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -75,17 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 101,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [], 'ventas_totales': 0.0}"
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 130},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'vestido', 'precio': 20, 'cantidad': 80}],\n",
+       " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,6 +490,14 @@
    ],
    "source": [
     "mi_tienda.eliminar_producto (\"calcetines\")  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b95f4a4",
+   "metadata": {},
+   "source": [
+    "#calcular valor del inventario"
    ]
   },
   {
